add 力扣 65 part done

--- a/_posts/leetcode/2020-10-13-leetcode-65.md
+++ b/_posts/leetcode/2020-10-13-leetcode-65.md
@@ -3,7 +3,7 @@ layout: post
 title: "LeetCode-65.有效数字(Valid Number)"
 categories: Leetcode
 tags: Math String
-excerpt: ""
+excerpt: "千呼万唤使出来"
 ---
 
 * content
@@ -46,7 +46,7 @@ excerpt: ""
 
 链接：[https://leetcode-cn.com/problems/valid-number/](https://leetcode-cn.com/problems/valid-number/)
 
-Link：https://leetcode.com/problems/valid-number/
+Link：[https://leetcode.com/problems/valid-number/](https://leetcode.com/problems/valid-number/)
 
 ## 依次判断
 
@@ -98,6 +98,8 @@ class Solution:
 
 ## 正则表达式
 
+参考:[https://leetcode.com/problems/valid-number/discuss/23728/A-simple-solution-in-Python-based-on-DFA](https://leetcode.com/problems/valid-number/discuss/23728/A-simple-solution-in-Python-based-on-DFA)
+
 ```python
 import re
 class Solution:
@@ -107,6 +109,60 @@ class Solution:
 
 ## 有限自动机
 
+```
+    blank    +/-    digit    .    digit    e    +/-    digit    blank
 
+      1      2        3      4      5      6      7      8        9
+```
+
+### 状态转换
+
+```
+1 -> blank=1, sign=2, digit=3, dot=4
+2 -> digit=3, dot=4
+3 -> digit=3, dot=4, e=6, blank=9  # ⚠️这里dot的转移状态和社区大神的不一致, 但个人觉得更好理解
+4 -> digit=5
+5 -> digit=5, e=6, blank=9
+6 -> sign=7, digit=8
+7 -> digit=8
+8 -> digit=8, blank=9
+9 -> blank=9
+```
+
+### 结束状态
+
+3, 5, 8, 9
+4 比较特殊， 如果遇到过数字，就是有效结束状态
+
+```python
+class Solution:
+    def isNumber(self, s: str) -> bool:
+        table = [{}, 
+            {'blank': 1, 'sign': 2, 'digit': 3, '.': 4}, 
+            {'digit': 3, '.': 4},
+            {'digit': 3, '.': 5, 'e': 6, 'blank': 9},
+            {'digit': 5},
+            {'digit': 5, 'e': 6, 'blank': 9},
+            {'sign': 7, 'digit': 8},
+            {'digit': 8},
+            {'digit': 8, 'blank': 9},
+            {'blank': 9}]
+        state = 1
+        digit_seen = False
+
+        for c in s:
+            if '0' <= c <= '9':
+                c = 'digit'
+                digit_seen = True
+            if c == ' ':
+                c = 'blank'
+            if c in ['+', '-']:
+                c = 'sign'
+            if c not in table[state].keys():
+                return False
+            state = table[state][c]
+
+        return state in [3, 5, 8, 9] or (state == 4 and digit_seen)
+```
 
 --End--
