--- a/_posts/leetcode/2020-07-06-leetcode-1.md
+++ b/_posts/leetcode/2020-07-06-leetcode-1.md
@@ -29,9 +29,9 @@ excerpt: "起航，Great Voyage"
 
 来源：力扣（LeetCode）
 
-链接：https://leetcode-cn.com/problems/two-sum/
+链接：[https://leetcode-cn.com/problems/two-sum/](https://leetcode-cn.com/problems/two-sum/)
 
-Link：https://leetcode.com/problems/two-sum/
+Link：[https://leetcode.com/problems/two-sum/](https://leetcode.com/problems/two-sum/)
 
 ### 哈希
 
