--- a/_posts/leetcode/2020-07-08-leetcode-3.md
+++ b/_posts/leetcode/2020-07-08-leetcode-3.md
@@ -37,9 +37,9 @@ excerpt: "滑动窗口"
 
 来源：力扣（LeetCode）
 
-链接：https://leetcode-cn.com/problems/longest-substring-without-repeating-characters/submissions/
+链接：[https://leetcode-cn.com/problems/longest-substring-without-repeating-characters/](https://leetcode-cn.com/problems/longest-substring-without-repeating-characters/)
 
-Link：https://leetcode.com/problems/longest-substring-without-repeating-characters
+Link：[https://leetcode.com/problems/longest-substring-without-repeating-characters](https://leetcode.com/problems/longest-substring-without-repeating-characters)
 
 ## 双指针
 
