--- a/_posts/leetcode/2020-07-09-leetcode-4.md
+++ b/_posts/leetcode/2020-07-09-leetcode-4.md
@@ -47,9 +47,9 @@ nums2 = [3, 4]
 
 来源：力扣（LeetCode）
 
-链接：https://leetcode-cn.com/problems/median-of-two-sorted-arrays/
+链接：[https://leetcode-cn.com/problems/median-of-two-sorted-arrays/](https://leetcode-cn.com/problems/median-of-two-sorted-arrays/)
 
-Link：https://leetcode.com/problems/median-of-two-sorted-arrays/
+Link：[https://leetcode.com/problems/median-of-two-sorted-arrays/](https://leetcode.com/problems/median-of-two-sorted-arrays/)
 
 ### 暴力破解
 
