--- a/_posts/leetcode/2020-07-10-leetcode-5.md
+++ b/_posts/leetcode/2020-07-10-leetcode-5.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "5. 最长回文子串(Longest Palindromic Substring)"
+title: "LeetCode-5.最长回文子串(Longest Palindromic Substring)"
 categories: Leetcode
 tags: String Dynamic-programming
 excerpt: "Your shine is something like a mirror"
@@ -9,7 +9,7 @@ excerpt: "Your shine is something like a mirror"
 * content
 {:toc}
 
-## 5. Longest Palindromic Substring
+## 5. 最长回文子串
 
 给定一个字符串 s，找到 s 中最长的回文子串。你可以假设 s 的最大长度为 1000。
 
@@ -27,6 +27,12 @@ excerpt: "Your shine is something like a mirror"
 输入: "cbbd"
 输出: "bb"
 ```
+
+来源：力扣（LeetCode）
+
+链接：[https://leetcode-cn.com/problems/longest-palindromic-substring/](https://leetcode-cn.com/problems/longest-palindromic-substring/)
+
+Link：[https://leetcode.com/problems/longest-palindromic-substring/](https://leetcode.com/problems/longest-palindromic-substring/)
 
 ### 暴力破解
 
