--- a/_posts/leetcode/2020-07-11-leetcode-6.md
+++ b/_posts/leetcode/2020-07-11-leetcode-6.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "6. Z 字形变换(ZigZag Conversion)"
+title: "LeetCode-6.Z字形变换(ZigZag Conversion)"
 categories: Leetcode
 tags: String
 excerpt: "归去来，与天杀价净赚三百"
@@ -11,7 +11,7 @@ excerpt: "归去来，与天杀价净赚三百"
 
 > 这道题更像是一则广告，吸引程序员投简历的。
 
-## 6. ZigZag Conversion
+## 6. Z 字形变换
 
 将一个给定字符串根据给定的行数，以从上往下、从左到右进行 Z 字形排列。
 
@@ -50,6 +50,12 @@ A   L S  I G
 Y A   H R
 P     I
 ```
+
+来源：力扣（LeetCode）
+
+链接：[https://leetcode-cn.com/problems/zigzag-conversion/](https://leetcode-cn.com/problems/zigzag-conversion/)
+
+Link：[https://leetcode.com/problems/zigzag-conversion/](https://leetcode.com/problems/zigzag-conversion/)
 
 ## 模拟法1
 
