--- a/_posts/leetcode/2020-10-18-leetcode-67.md
+++ b/_posts/leetcode/2020-10-18-leetcode-67.md
@@ -60,8 +60,8 @@ class Solution:
             right = int(b[j]) if j >=0 else 0        
             val = left + right + carry
     
-            res = str(val % 2) + res
-            carry = val // 2
+            res = str(val % 2) + res # str(val & 1) + res
+            carry = val // 2 # val >> 1
             
             i -= 1
             j -= 1
@@ -69,30 +69,22 @@ class Solution:
         return res
 ```
 
-二进制重写
+## 题外话
 
-```python
-class Solution:
-    def addBinary(self, a: str, b: str) -> str:
-        
-        carry = 0
-        i = len(a) - 1
-        j = len(b) - 1
-        res = ''
-        
-        while i >= 0 or j >=0 or carry > 0:
-            
-            left = int(a[i]) if i >=0 else 0
-            right = int(b[j]) if j >=0 else 0        
-            val = left + right + carry
-    
-            res = str(val & 1) + res # val % 2 + res
-            carry = val >> 1 # val // 2
-            
-            i -= 1
-            j -= 1
-            
-        return res
-```
+### 为什么我要写这个公众号
+
+我是2018年开始刷题的，当时LeetCode还没有过千，从同学那里得知FANNG面试比重非常大。
+
+那个时候300来道题，在知乎上看到一篇问答《刷 LeetCode 吃力正常吗？》随手回答了一下，没想到点赞过千了。
+
+学算法是非常反人类的事情，不只吃力这么简单，简直会怀疑自己根本不适合做计算机行业
+
+300百虽然不多，但是回头看，还是挺有成就感的，甚至有些感动
+
+这条路很艰难，每学会新的东西，都觉得这些只是基础
+
+这里的分享，只是个人的标准，希望帮助到你
+
+原稿博客: [http://geemaple.github.io/](http://geemaple.github.io/)
 
 --End--
