--- a/_posts/leetcode/2020-10-21-leetcode-69.md
+++ b/_posts/leetcode/2020-10-21-leetcode-69.md
@@ -2,7 +2,7 @@
 layout: post
 title: "LeetCode-69.文本左右对齐(Sqrt(x))"
 categories: Leetcode
-tags: Math String
+tags: Math Binary-search
 excerpt: ""
 ---
 
@@ -43,7 +43,7 @@ excerpt: ""
 
 Link：[https://leetcode.com/problems/sqrtx](https://leetcode.com/problems/sqrtx)
 
-## 暴力
+## 暴力破解
 
 O(N)
 
