--- a/_posts/leetcode/2020-10-19-leetcode-68.md
+++ b/_posts/leetcode/2020-10-19-leetcode-68.md
@@ -3,7 +3,7 @@ layout: post
 title: "LeetCode-68.文本左右对齐(Text Justification)"
 categories: Leetcode
 tags: Math String
-excerpt: ""
+excerpt: "前端工程师必备"
 ---
 
 * content
@@ -21,11 +21,15 @@ excerpt: ""
 
 说明:
 
+```
 单词是指由非空格字符组成的字符序列。
 每个单词的长度大于 0，小于等于 maxWidth。
 输入单词数组 words 至少包含一个单词。
+```
+
 示例:
 
+```
 输入:
 words = ["This", "is", "an", "example", "of", "text", "justification."]
 maxWidth = 16
@@ -35,8 +39,11 @@ maxWidth = 16
    "example  of text",
    "justification.  "
 ]
+```
+
 示例 2:
 
+```
 输入:
 words = ["What","must","be","acknowledgment","shall","be"]
 maxWidth = 16
@@ -49,8 +56,11 @@ maxWidth = 16
 解释: 注意最后一行的格式应为 "shall be    " 而不是 "shall     be",
      因为最后一行应为左对齐，而不是左右两端对齐。       
      第二行同样为左对齐，这是因为这行只包含一个单词。
+```
+
 示例 3:
 
+```
 输入:
 words = ["Science","is","what","we","understand","well","enough","to","explain",
          "to","a","computer.","Art","is","everything","else","we","do"]
@@ -64,6 +74,7 @@ maxWidth = 20
   "everything  else  we",
   "do                  "
 ]
+```
 
 来源：力扣（LeetCode）
 
@@ -120,6 +131,23 @@ class Solution:
             res.append(output)
 
         return res
+```
+
+思路一致，简洁的令人发指
+
+```python
+class Solution:
+    def fullJustify(self, words: List[str], maxWidth: int) -> List[str]:
+        res, cur, num_of_letters = [], [], 0
+        for w in words:
+            if num_of_letters + len(w) + len(cur) > maxWidth:
+                for i in range(maxWidth - num_of_letters):
+                    cur[i%(len(cur)-1 or 1)] += ' '
+                res.append(''.join(cur))
+                cur, num_of_letters = [], 0
+            cur += [w]
+            num_of_letters += len(w)
+        return res + [' '.join(cur).ljust(maxWidth)]
 ```
 
 --End--
