--- a/_posts/leetcode/2020-10-21-leetcode-69.md
+++ b/_posts/leetcode/2020-10-21-leetcode-69.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "LeetCode-69.文本左右对齐(Sqrt(x))"
+title: "LeetCode-69.X的平方根(Sqrt(x))"
 categories: Leetcode
 tags: Math Binary-search
 excerpt: ""
@@ -62,7 +62,7 @@ class Solution:
 
 O(logN)
 
-模版一
+### 模版一
 
 ```python
 class Solution:
@@ -83,7 +83,7 @@ class Solution:
         return end if (end * end <= x) else start
 ```
 
-模版二
+### 模版二
 
 ```python
 class Solution:
@@ -105,7 +105,7 @@ class Solution:
         return start if start * start <= x else start - 1
 ```
 
-模版三
+### 模版三
 
 ```python
 class Solution:
@@ -126,5 +126,13 @@ class Solution:
             
         return start if start * start <= x else start - 1
 ```
+
+## 比特位
+
+// TBD
+
+## 牛顿迭代
+
+// TBD
 
 --End--
