--- a/_posts/leetcode/2020-07-13-leetcode-7.md
+++ b/_posts/leetcode/2020-07-13-leetcode-7.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "7. 整数反转(Reverse Integer)"
+title: "LeetCode-7.整数反转(Reverse Integer)"
 categories: Leetcode
 tags: Math
 excerpt: "边界与范围"
@@ -9,7 +9,7 @@ excerpt: "边界与范围"
 * content
 {:toc}
 
-# 7. Reverse Integer
+# 7. 整数反转
 
 给出一个 32 位的有符号整数，你需要将这个整数中每位上的数字进行反转。
 
@@ -37,6 +37,12 @@ excerpt: "边界与范围"
 注意:
 
 假设我们的环境只能存储得下 32 位的有符号整数，则其数值范围为 [−2^31,  23^1 − 1]。请根据这个假设，如果反转后整数溢出那么就返回 0。
+
+来源：力扣（LeetCode）
+
+链接：[https://leetcode-cn.com/problems/reverse-integer/](https://leetcode-cn.com/problems/reverse-integer/)
+
+Link：[https://leetcode.com/problems/reverse-integer/](https://leetcode.com/problems/reverse-integer/)
 
 ## 模拟法
 
