--- a/_posts/leetcode/2020-10-22-leetcode-70.md
+++ b/_posts/leetcode/2020-10-22-leetcode-70.md
@@ -46,6 +46,66 @@ Link：[https://leetcode.com/problems/climbing-stairs/](https://leetcode.com/pro
 
 ## 动态规划
 
-// TBD
+### 递推公式
+
+最后的N，只能从N - 1和N - 2两个地方跳跃过来
+
+```
+table[i] = table[i - 1] + table[i - 2]
+```
+
+### 初始条件
+
+table[0] = 1
+table[1] = 1
+
+### 边界条件
+
+从第二个开始遍历
+
+### 计算方向
+
+从低到高
+
+```python
+class Solution:
+    def climbStairs(self, n: int) -> int:
+        table = [1 for i in range(n + 1)]
+        
+        for i in range(2, n + 1):
+            table[i] = table[i - 1] + table[i - 2]
+            
+        return table[-1]
+```
+
+### 路径压缩
+
+每个新值计算，只依赖前两个，也就是说我们可以把table压缩一下
+
+数组大小 = 2， 取的地方都模2
+
+```python
+class Solution:
+    def climbStairs(self, n: int) -> int:
+        table = [1 for i in range(2)]
+        
+        for i in range(2, n + 1):
+            table[i % 2] = table[(i - 1) % 2] + table[(i - 2) % 2]
+            
+        return table[n % 2]
+```
+
+我们令第一个取值pre, 第二个取值next
+
+```python
+class Solution:
+    def climbStairs(self, n: int) -> int:
+        pre, next = 1, 1
+        
+        for i in range(2, n + 1):
+            pre, next = next, pre + next
+            
+        return next
+```
 
 --End--
