--- a/_posts/leetcode/2020-07-14-leetcode-8.md
+++ b/_posts/leetcode/2020-07-14-leetcode-8.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "8. 字符串转换整数(String to Integer)(atoi)"
+title: "LeetCode-8.字符串转换整数(atoi)(String to Integer)(atoi)"
 categories: Leetcode
 tags: Math String
 excerpt: "哪有什么岁月静好"
@@ -9,7 +9,7 @@ excerpt: "哪有什么岁月静好"
 * content
 {:toc}
 
-## 8. String to Integer (atoi)
+## 8. 字符串转换整数 (atoi)
 
 实现c语言中的atoi函数，使其能将字符串转换成整数
 
@@ -67,6 +67,13 @@ excerpt: "哪有什么岁月静好"
 解释: 数字 "-91283472332" 超过 32 位有符号整数范围。 
      因此返回 INT_MIN (−2^31) 。
 ```
+
+来源：力扣（LeetCode）
+
+链接：[https://leetcode-cn.com/problems/string-to-integer-atoi/](https://leetcode-cn.com/problems/string-to-integer-atoi/)
+
+Link：[https://leetcode.com/problems/string-to-integer-atoi/](https://leetcode.com/problems/string-to-integer-atoi/)
+
 
 ## 模拟法
 
