--- a/_posts/leetcode/2020-10-23-leetcode-71.md
+++ b/_posts/leetcode/2020-10-23-leetcode-71.md
@@ -3,7 +3,7 @@ layout: post
 title: "LeetCode-71.简化路径(Simplify Path)"
 categories: Leetcode
 tags: String Stack
-excerpt: ""
+excerpt: "1024放假"
 ---
 
 * content
@@ -11,18 +11,18 @@ excerpt: ""
 
 ## 71. 简化路径
 
-以 Unix 风格给出一个文件的绝对路径，你需要简化它。或者换句话说，将其转换为规范路径。
+给出一个文件(Unix 风格的)的绝对路径，简化它，将其转换为标准路径。
 
-在 Unix 风格的文件系统中，一个点（.）表示当前目录本身；此外，两个点 （..） 表示将目录切换到上一级（指向父目录）；两者都可以是复杂相对路径的组成部分。更多信息请参阅：Linux / Unix中的绝对路径 vs 相对路径
+在 Unix 文件系统中, 一个点 . 表示当前目录；两个点 .. 表示将目录切换到上一级
 
-请注意，返回的规范路径必须始终以斜杠 / 开头，并且两个目录名之间必须只有一个斜杠 /。最后一个目录名（如果存在）不能以 / 结尾。此外，规范路径必须是表示绝对路径的最短字符串。
+⚠️注意，返回的结果必须始终以斜杠 / 开头，并且两个目录名之间只能有一个斜杠 /。最后一个目录名（如果存在）不能以 / 结尾。此外，规范路径必须是表示绝对路径的最短字符串。
 
 示例 1：
 
 ```
 输入："/home/"
 输出："/home"
-解释：注意，最后一个目录名后面没有斜杠。
+解释：最后一个目录名后面没有斜杠
 ```
 
 示例 2：
@@ -30,7 +30,7 @@ excerpt: ""
 ```
 输入："/../"
 输出："/"
-解释：从根目录向上一级是不可行的，因为根是你可以到达的最高级。
+解释：由于 / 是最高级路径，移动到上一级是不可能的，保持 / 不变
 ```
 
 示例 3：
@@ -38,7 +38,7 @@ excerpt: ""
 ```
 输入："/home//foo/"
 输出："/home/foo"
-解释：在规范路径中，多个连续斜杠需要用一个斜杠替换。
+解释：标准路径中，多个连续斜杠需用一个斜杠替换。
 ```
 
 示例 4：
@@ -93,6 +93,5 @@ class Solution:
                 
         return '/' + '/'.join(stack)
 ```
-
 
 --End--
