--- a/_posts/leetcode/2020-10-26-leetcode-72.md
+++ b/_posts/leetcode/2020-10-26-leetcode-72.md
@@ -3,7 +3,7 @@ layout: post
 title: "LeetCode-72.编辑距离(Edit Distance)"
 categories: Leetcode
 tags: String Dynamic-programming
-excerpt: ""
+excerpt: "禁酒令"
 ---
 
 * content
