--- a/_posts/leetcode/2020-10-26-leetcode-73.md
+++ b/_posts/leetcode/2020-10-26-leetcode-73.md
@@ -53,13 +53,6 @@ excerpt: ""
 
 Link：[https://leetcode.com/problems/set-matrix-zeroes/](https://leetcode.com/problems/set-matrix-zeroes/)
 
-
-## 暴力破解
-
-O(M*N)
-
-找到所有的0点，然后在一个个行列重置为0, 空间O(M*N)
-
 ## 行列重置
 
 O(M*N)
@@ -100,7 +93,7 @@ class Solution:
 
 第一行列, 需要额外的first_row+first_col来记录列,
 
-先处理剩余部分, 在处理第一行列
+先处理剩余部分, 再处理第一行列
 
 ```
 左上角 ##################### cols
