--- a/_posts/leetcode/2020-10-27-leetcode-75.md
+++ b/_posts/leetcode/2020-10-27-leetcode-75.md
@@ -40,7 +40,91 @@ excerpt: ""
 
 Link：[https://leetcode.com/problems/sort-colors](https://leetcode.com/problems/sort-colors)
 
+## 简单排序
 
+O(NlogN)
 
+随便用一个排序，即完成, 如果是快排序/归并，时间复杂度较优
+
+## 计数排序
+
+O(N)
+
+也叫Counting-Sort
+
+```
+ 000000...  1111111...  2222222
+   m           n           k
+   m         m + n     k + m + n
+  sum1        sum2        sum3
+如果是0, 放在下标(sum1 - 1)的位置, sum1计数减一
+如果是1, 放在下标(sum2 - 1)的位置, sum2计数减一
+如果是2, 放在下标(sum3 - 1)的位置, sum3计数减一
+```
+代码如下:
+
+```python
+class Solution:
+    def sortColors(self, nums: List[int]) -> None:
+        """
+        Do not return anything, modify nums in-place instead.
+        """
+        count_table = [0 for i in range(3)]
+        
+        # 计数
+        for num in nums:
+            count_table[num] += 1
+        
+        #  计算sum1 ... sumN
+        for i in range(1, len(count_table)):
+            count_table[i] += count_table[i - 1]
+            
+        # 按下标放置数字
+        for num in nums.copy():
+            index = count_table[num] - 1
+            nums[index] = num
+            count_table[num] -= 1
+```
+
+## 双指针
+
+O(N)
+
+用i作为0的右边界, 不包含i, i作为0的候选替换元素
+
+用j作为2的左边界, 不包含j, j作为2的候选替换元素
+
+下标k用来扫描数组, k <= j时 结束
+
+```
+[0,0,1,1,2,2]
+     i j
+k -------->
+```
+
+代码如下：
+
+```python
+class Solution:
+    def sortColors(self, nums: List[int]) -> None:
+        """
+        Do not return anything, modify nums in-place instead.
+        """
+        
+        i = k = 0
+        j = len(nums) - 1
+        
+        while k <= j:
+            if nums[k] == 0:
+                nums[i], nums[k] = nums[k], nums[i]
+                i += 1
+                k += 1
+            elif nums[k] == 2:
+                nums[j], nums[k] = nums[k], nums[j]
+                j -= 1
+            else:
+                k += 1
+        
+```
 
 --End--
