--- a/_posts/leetcode/2020-10-27-leetcode-75.md
+++ b/_posts/leetcode/2020-10-27-leetcode-75.md
@@ -40,11 +40,37 @@ excerpt: ""
 
 Link：[https://leetcode.com/problems/sort-colors](https://leetcode.com/problems/sort-colors)
 
-## 简单排序
+## 简单计数
 
-O(NlogN)
+O(N)
 
-随便用一个排序，即完成, 如果是快排序/归并，时间复杂度较优
+把[0,1,2]数量分别记下来，最后填充起来
+
+```python
+class Solution:
+    def sortColors(self, nums: List[int]) -> None:
+        """
+        Do not return anything, modify nums in-place instead.
+        """
+        count_zero = count_one = count_two = 0
+        
+        for num in nums:
+            if num == 0:
+                count_zero += 1
+            elif num == 1:
+                count_one += 1
+            else:
+                count_two += 1
+            
+        for i in range(count_zero):
+            nums[i] = 0
+            
+        for i in range(count_zero, count_zero + count_one):
+            nums[i] = 1
+            
+        for i in range(count_zero + count_one, count_zero + count_one + count_two):
+            nums[i] = 2
+```
 
 ## 计数排序
 
@@ -125,6 +151,45 @@ class Solution:
             else:
                 k += 1
         
+```
+
+## 刷油漆
+
+O(N)
+
+```
+[2,0,2,1,1,0]
+
+ 2 2 2 2 2 2 首先都刷成2
+ 
+ 1 1 1 1     <2的部分刷成1
+
+ 0 0         =0的部分刷成0
+
+```
+
+代码如下:
+
+```python
+class Solution:
+    def sortColors(self, nums: List[int]) -> None:
+        """
+        Do not return anything, modify nums in-place instead.
+        """
+        
+        i = j = 0
+        for k in range(len(nums)):
+            value = nums[k]
+            
+            nums[k] = 2
+            
+            if value < 2:
+                nums[i] = 1
+                i += 1
+                
+            if value == 0:
+                nums[j] = 0
+                j += 1
 ```
 
 --End--
