--- a/_posts/leetcode/2020-10-27-leetcode-75.md
+++ b/_posts/leetcode/2020-10-27-leetcode-75.md
@@ -2,7 +2,7 @@
 layout: post
 title: "LeetCode-75.颜色分类(Sort Colors)"
 categories: Leetcode
-tags: 
+tags: Array Two-pointers Sort
 excerpt: ""
 ---
 
