Add 力扣 77, 更新76

--- a/_posts/leetcode/2020-10-28-leetcode-76.md
+++ b/_posts/leetcode/2020-10-28-leetcode-76.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "LeetCode-76.颜色分类(Minimum Window Substring)"
+title: "LeetCode-76.最小覆盖子串(Minimum Window Substring)"
 categories: Leetcode
 tags: Hash-table Two-pointers String Sliding-window
 excerpt: ""
@@ -87,5 +87,41 @@ class Solution:
         return res
 ```
 
+去掉两行, 不影响结果
+
+```python
+class Solution:
+    def minWindow(self, s: str, t: str) -> str:
+    
+        checker = {}
+        remain = len(t)
+        start = 0
+        res = ''
+        
+        for char in t:
+            checker[char] = checker.get(char, 0) + 1
+        
+        for end in range(len(s)):
+            char = s[end]
+            if char in checker:
+                checker[char] -= 1
+                if checker[char] >= 0:
+                    remain -= 1
+                
+            while remain == 0:
+                if len(res) == 0 or end - start + 1 < len(res):
+                    res = s[start: end + 1]
+                    
+                char = s[start]
+                if char in checker:
+                    checker[char] += 1
+                    if checker[char] > 0:
+                        remain += 1
+                        
+                start += 1
+                # 这里有两行被删除
+                    
+        return res
+```
 
 --End--
