--- a/_posts/leetcode/2020-07-15-leetcode-9.md
+++ b/_posts/leetcode/2020-07-15-leetcode-9.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "9. 回文数(Palindrome Number)"
+title: "LeetCode-9.回文数(Palindrome Number)"
 categories: Leetcode
 tags: Math
 excerpt: "?Borrow or rob?"
@@ -9,7 +9,7 @@ excerpt: "?Borrow or rob?"
 * content
 {:toc}
 
-## 9. Palindrome Number
+## 9. 回文数
 
 判断一个整数是否是回文数。回文数是指正序（从左向右）和倒序（从右向左）读都是一样的整数。
 
@@ -37,6 +37,12 @@ excerpt: "?Borrow or rob?"
 ```
 
 进阶: 你能不将整数转为字符串来解决这个问题吗？
+
+来源：力扣（LeetCode）
+
+链接：[https://leetcode-cn.com/problems/palindrome-number/](https://leetcode-cn.com/problems/palindrome-number/)
+
+Link：[https://leetcode.com/problems/palindrome-number/](https://leetcode.com/problems/palindrome-number/)
 
 ## 模拟法
 
