--- a/_posts/leetcode/2020-10-26-leetcode-73.md
+++ b/_posts/leetcode/2020-10-26-leetcode-73.md
@@ -3,7 +3,7 @@ layout: post
 title: "LeetCode-73.矩阵置零(Set Matrix Zeroes)"
 categories: Leetcode
 tags: Array
-excerpt: ""
+excerpt: "教父"
 ---
 
 * content
