--- a/_posts/leetcode/2020-10-28-leetcode-76.md
+++ b/_posts/leetcode/2020-10-28-leetcode-76.md
@@ -81,45 +81,11 @@ class Solution:
                         remain += 1
                         
                 start += 1
+
+                # 开始:这里有两行被删除, 个人偏好喜欢留着
                 while start < len(s) and s[start] not in checker:
                     start += 1
-                    
-        return res
-```
-
-去掉两行, 不影响结果
-
-```python
-class Solution:
-    def minWindow(self, s: str, t: str) -> str:
-    
-        checker = {}
-        remain = len(t)
-        start = 0
-        res = ''
-        
-        for char in t:
-            checker[char] = checker.get(char, 0) + 1
-        
-        for end in range(len(s)):
-            char = s[end]
-            if char in checker:
-                checker[char] -= 1
-                if checker[char] >= 0:
-                    remain -= 1
-                
-            while remain == 0:
-                if len(res) == 0 or end - start + 1 < len(res):
-                    res = s[start: end + 1]
-                    
-                char = s[start]
-                if char in checker:
-                    checker[char] += 1
-                    if checker[char] > 0:
-                        remain += 1
-                        
-                start += 1
-                # 这里有两行被删除
+                # 结束:这里有两行被删除
                     
         return res
 ```
