--- a/_posts/leetcode/2020-10-28-leetcode-77.md
+++ b/_posts/leetcode/2020-10-28-leetcode-77.md
@@ -2,7 +2,7 @@
 layout: post
 title: "LeetCode-77.组合(Combinations)"
 categories: Leetcode
-tags: Backtracking
+tags: Array Backtracking Bit-manipulation
 excerpt: ""
 ---
 
@@ -15,6 +15,7 @@ excerpt: ""
 
 示例:
 
+```
 输入: n = 4, k = 2
 输出:
 [
@@ -25,6 +26,7 @@ excerpt: ""
   [1,3],
   [1,4],
 ]
+```
 
 来源：力扣（LeetCode）
 
@@ -34,6 +36,48 @@ Link：[https://leetcode.com/problems/combinations](https://leetcode.com/problem
 
 ## 回溯
 
-//TBD
+O(N!/(N - K)!)
+
+代码如下
+
+```python
+class Solution:
+    def combine(self, n: int, k: int) -> List[List[int]]:
+
+        res = []
+        self.helper(n, k, 1, [], res)
+        return res
+        
+    def helper(self, n: int, k: int, start: int, ans: List[int], res: List[List[int]]):
+    
+        if len(ans) == k:
+            res.append(list(ans))
+            return
+
+        for i in range(start, n + 1):
+            ans.append(i)
+            self.helper(n, k, i + 1, ans, res)
+            ans.pop()
+```
+
+利用递归的特殊性，回溯代码可以写成**ans + [i]**
+
+```python
+class Solution:
+    def combine(self, n: int, k: int) -> List[List[int]]:
+    
+        res = []
+        self.helper(n, k, 1, [], res)
+        return res
+        
+    def helper(self, n: int, k: int, start: int, ans: List[int], res: List[List[int]]):
+    
+        if len(ans) == k:
+            res.append(list(ans))
+            return
+
+        for i in range(start, n + 1):
+            self.helper(n, k, i + 1, ans + [i], res)
+```
 
 --End--
