--- a/_posts/leetcode/2020-10-30-leetcode-78.md
+++ b/_posts/leetcode/2020-10-30-leetcode-78.md
@@ -40,7 +40,7 @@ Link：[https://leetcode.com/problems/subsets](https://leetcode.com/problems/sub
 
 ## 回溯
 
-O(2^N)
+O(N * 2^N)
 
 代码如下
 
@@ -78,6 +78,19 @@ class Solution:
 
 ## 拷贝添加
 
+O(N * 2^N)
+
+从[]开始，每次拷贝所有元素，并且在拷贝元素上加数字
+
+```
+开始   [[]]
+  1   [[], [1]]
+  2   [[], [1], [2], [1, 2]]
+  3   [[], [1], [2], [1, 2], [3], [1, 3], [2, 3], [1, 2, 3]] 
+```
+
+代码如下
+
 ```python
 class Solution:
     def subsets(self, nums: List[int]) -> List[List[int]]:
@@ -88,6 +101,43 @@ class Solution:
             res += tmp
     
         return res
+```
+
+## 比特位
+
+O(N * 2^N)
+
+一共有2^N个结果
+
+```
+1每2个元素出现1次
+2每4个元素出现2次
+3每8个元素出现4次
+
+[], [], [], [], [], [], [], []
+
+[], [1], [], [1], [], [1], [], [1]
+
+[], [1], [2], [1, 2], [], [1], [2], [1, 2]
+
+[], [1], [2], [1, 2], [3], [1, 3], [2, 3], [1, 2, 3]
+```
+
+代码如下:
+
+```python
+class Solution:
+    def subsets(self, nums: List[int]) -> List[List[int]]:
+        size = len(nums)
+        num_subset = 2 ** size
+        results = [[] for _ in range(num_subset)]
+
+        for i in range(size):
+            for j in range(num_subset):
+                if ((j >> i) & 1):
+                    results[j].append(nums[i])
+
+        return results
 ```
 
 --End--
