--- a/_posts/leetcode/2020-10-30-leetcode-79.md
+++ b/_posts/leetcode/2020-10-30-leetcode-79.md
@@ -45,9 +45,9 @@ Link：[https://leetcode.com/problems/word-search/](https://leetcode.com/problem
 
 ## 回溯
 
-O()
+O(N * 3^L)
 
-从起点字符开始，观察四个方向，分别尝试。
+从起点字符开始，观察四个方向, 如果满足就分别去尝试。
 
 ```python
 class Solution:
@@ -84,5 +84,42 @@ class Solution:
             
         return False
 ```
+
+先看当前是否满足，如果满足，再递归去看四个方向
+
+```python
+class Solution:
+    def exist(self, board: List[List[str]], word: str) -> bool:
+        
+        self.directions = [(0, 1), (1, 0), (0, -1), (-1, 0)]
+        
+        for i in range(len(board)):
+            for j in range(len(board[0])):
+                if self.helper(board, word, i, j, 0, set()):
+                    return True
+                
+        return False
+        
+        
+    def helper(self, board: List[List[str]], word: str, x: int, y:int, index: int, visited: set) -> None:     
+        
+        if index == len(word):
+            return True
+        
+        if (x, y) not in visited and 0 <= x < len(board) and 0 <= y < len(board[0]) and board[x][y] == word[index]:
+
+            visited.add((x, y))
+            for k in range(len(self.directions)):
+                
+                new_x = x + self.directions[k][0]
+                new_y = y + self.directions[k][1]
+
+                if self.helper(board, word, new_x, new_y, index + 1, visited):
+                    return True  
+            visited.remove((x, y)) 
+            
+        return False
+```
+
 
 --End--
