--- a/_posts/leetcode/2020-10-30-leetcode-79.md
+++ b/_posts/leetcode/2020-10-30-leetcode-79.md
@@ -45,7 +45,7 @@ Link：[https://leetcode.com/problems/word-search/](https://leetcode.com/problem
 
 ## 回溯
 
-O(N * 3^L)
+O(N * 3^L), 除了第一个位置4个方向，接下来只有3个方向，L代表word长度
 
 从起点字符开始，观察四个方向, 如果满足就分别去尝试。
 
