--- a/_posts/leetcode/2020-11-02-leetcode-81.md
+++ b/_posts/leetcode/2020-11-02-leetcode-81.md
@@ -71,27 +71,27 @@ O(logN)
 -----------------------------------
 ```
 
-### 如果中间在a处：mid >= nums[0]
-
 ```
+# 如果中间在a处：mid >= nums[0]
+
 --------｜----------｜---------
       nums[0]      mid
 ```
 
 **nums[left] <= target < mid**, 丢弃a的右边
 
-### 如果中间在b处: mid < nums[0]
-
 ```
+# 如果中间在b处: mid < nums[0]
+
 --------｜----------｜---------
        mid        nums[0]
 ```
 
 **mid < target <= nums[right]**, 丢弃b的左边
 
-### 排序数组特例
-
 ```
+# 排序数组特例
+
 |                           X
 |                        X
 |                     X
@@ -137,9 +137,8 @@ class Solution:
 
 O(N)
 
-若nums[mid] == nums[left]会误判认为是在a点的情况, 需要特殊处理
-
 ```
+# 若nums[mid] == nums[left]会误判认为是在a点的情况, 需要特殊处理
 |                         
 |                       
 |                    
@@ -186,6 +185,6 @@ class Solution:
 
 ### One More Thing
 
-这里使用的是**Start**做为两种情况的参考坐标，当然也可以使用**End**做为参考坐标
+这里使用的是**Left**做为两种情况的参考坐标，当然也可以使用**Right**做为参考坐标
 
 --End--
