Update 力扣 81 图形对比添加

--- a/_posts/leetcode/2020-11-02-leetcode-81.md
+++ b/_posts/leetcode/2020-11-02-leetcode-81.md
@@ -138,13 +138,21 @@ class Solution:
 O(N)
 
 ```
-# 若nums[mid] == nums[left]会误判认为是在a点的情况, 需要特殊处理
+# 若nums[mid] == nums[left]会造成无法判断a/b的情况, 需要特殊处理
                     
 |              
 |           
 |         X
 |      X
 |   X        X  X  X  X  X  X
+|
+-----------------------------------
+
+|              
+|           
+|                        X
+|                     X
+|   X  X  X  X  X  X        X
 |
 -----------------------------------
 ```
