Update 力扣 81 描述更新

--- a/_posts/leetcode/2020-11-02-leetcode-81.md
+++ b/_posts/leetcode/2020-11-02-leetcode-81.md
@@ -76,21 +76,21 @@ O(logN)
 
 --------｜----------｜---------
       nums[0]      mid
-```
 
-**nums[left] <= target < mid**, 丢弃a的右边
+nums[left] <= target < mid #丢弃a的右边
 
-```
 # 如果中间在b处: mid < nums[0]
 
 --------｜----------｜---------
        mid        nums[0]
+
+mid < target <= nums[right] #丢弃b的左边
 ```
 
-**mid < target <= nums[right]**, 丢弃b的左边
+旋转排序数组特例:
 
 ```
-# 排序数组特例
+# 正常排序数组同样满足上面条件a
 
 |                           X
 |                        X
@@ -103,9 +103,10 @@ O(logN)
 |   X
 |
 -----------------------------------
+
 ```
 
-正常排序数组同样满足上面条件a
+代码如下:
 
 ```python
 class Solution:
@@ -137,9 +138,10 @@ class Solution:
 
 O(N)
 
+若nums[mid] == nums[left]会造成无法判断a/b的情况, 需要特殊处理
+
 ```
-# 若nums[mid] == nums[left]会造成无法判断a/b的情况, 需要特殊处理
-                    
+# 情况a                 
 |              
 |           
 |         X
@@ -148,6 +150,7 @@ O(N)
 |
 -----------------------------------
 
+# 情况b
 |              
 |           
 |                        X
