--- a/_posts/leetcode/2020-07-16-leetcode-10.md
+++ b/_posts/leetcode/2020-07-16-leetcode-10.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "10. 正则表达式匹配(Regular Expression Matching)"
+title: "LeetCode-10.正则表达式匹配(Regular Expression Matching)"
 categories: Leetcode
 tags: Math Dynamic-programming Backtracking
 excerpt: "心态爆炸之旅"
@@ -13,7 +13,7 @@ excerpt: "心态爆炸之旅"
 
 这是第二道Hard的题目, 属于劝退类型
 
-## 10. Regular Expression Matching
+## 10. 正则表达式匹配
 
 给你一个字符串 s 和一个字符规律 p，请你来实现一个支持 '.' 和 '*' 的正则表达式匹配。
 
@@ -77,6 +77,12 @@ s = "mississippi"
 p = "mis*is*p*."
 输出: false
 ```
+
+来源：力扣（LeetCode）
+
+链接：[https://leetcode-cn.com/problems/regular-expression-matching/](https://leetcode-cn.com/problems/regular-expression-matching/)
+
+Link：[https://leetcode.com/problems/regular-expression-matching/](https://leetcode.com/problems/regular-expression-matching/)
 
 ### 暴力破解
 
