--- a/_posts/leetcode/2020-10-28-leetcode-76.md
+++ b/_posts/leetcode/2020-10-28-leetcode-76.md
@@ -3,7 +3,7 @@ layout: post
 title: "LeetCode-76.最小覆盖子串(Minimum Window Substring)"
 categories: Leetcode
 tags: Hash-table Two-pointers String Sliding-window
-excerpt: ""
+excerpt: "为了这一刻"
 ---
 
 * content
@@ -43,7 +43,7 @@ O(N)
 
 使用双指针[start, end]来分别代表窗口大小, 用哈希checker来记录字母数量，remain来记录剩余要匹配的长度
 
-1. 依次右移动end, 知道完全匹配目标t(checker计数全部<=0**and**remain==0)
+1. 依次右移动end, 知道完全匹配目标t(checker计数全部<=0 **并且** remain==0)
 2. 如果满足条件, 记录答案，右移动start, 恢复checker+remain, 然后移动start直到下一个可能的字母停下(也就是t中的任意一个)
 3. 重复2, 然后继续执行1
 
@@ -82,10 +82,10 @@ class Solution:
                         
                 start += 1
 
-                # 开始:这里有两行被删除, 个人偏好喜欢留着
+                # 开始:这两行可以删除, 个人偏好喜欢留着
                 while start < len(s) and s[start] not in checker:
                     start += 1
-                # 结束:这里有两行被删除
+                # 结束:这两行可以删除
                     
         return res
 ```
