--- a/_posts/leetcode/2020-10-28-leetcode-77.md
+++ b/_posts/leetcode/2020-10-28-leetcode-77.md
@@ -80,4 +80,17 @@ class Solution:
             self.helper(n, k, i + 1, ans + [i], res)
 ```
 
+## One More Thing
+
+### 如何入门？
+
+刚入门新手，应该熟练掌握基础算法和数据结构，并锻炼代码实践能力，推荐按标签🏷️来各个击破
+
+### 如何解题？
+
+1. 先理解题意，确定使用什么算法。不要边写边思考，避免思路回滚。建议先将思路，甚至把代码在脑海里过一遍再写
+2. 看重代码时间复杂度，而不是具体执行时间，有些题目测试数量比较少，可能出现复杂度低反而运行更多时间的情况
+3. 简化代码，思考逻辑简洁的解法，避免繁琐的逻辑判断。参考别人同时间复杂度但是更简洁的代码
+4. 把代码打印出来，或者在白板，word等软件中书写检验代码，锻炼肉眼debug的能力
+
 --End--
