--- a/_posts/leetcode/2020-07-17-leetcode-11.md
+++ b/_posts/leetcode/2020-07-17-leetcode-11.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "11. 盛最多水的容器(Container With Most Water)"
+title: "LeetCode-11.盛最多水的容器(Container With Most Water)"
 categories: Leetcode
 tags: Array Two-pointers
 excerpt: "班达米尔湖"
@@ -9,7 +9,7 @@ excerpt: "班达米尔湖"
 * content
 {:toc}
 
-## 11. Container With Most Water
+## 11. 盛最多水的容器
 
 给你 n 个非负整数 a1，a2，...，an，每个数代表坐标中的一个点 (i, ai) 。在坐标内画 n 条垂直线，垂直线 i 的两个端点分别为 (i, ai) 和 (i, 0)。找出其中的两条线，使得它们与 x 轴共同构成的容器可以容纳最多的水。
 
@@ -23,6 +23,12 @@ excerpt: "班达米尔湖"
 输入：[1,8,6,2,5,4,8,3,7]
 输出：49
 ```
+
+来源：力扣（LeetCode）
+
+链接：[https://leetcode-cn.com/problems/container-with-most-water/](https://leetcode-cn.com/problems/container-with-most-water/)
+
+Link：[https://leetcode.com/problems/container-with-most-water/](https://leetcode.com/problems/container-with-most-water/)
 
 ## 暴力破解
 
