--- a/_posts/leetcode/2020-11-10-leetcode-85.md
+++ b/_posts/leetcode/2020-11-10-leetcode-85.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "LeetCode-84.柱状图中最大的矩形(Largest Rectangle in Histogram)"
+title: "LeetCode-85.最大矩形(Maximal Rectangle)"
 categories: Leetcode
 tags: Stack Array
 excerpt: ""
