Update 力扣 85 标签

--- a/_posts/leetcode/2020-11-10-leetcode-85.md
+++ b/_posts/leetcode/2020-11-10-leetcode-85.md
@@ -2,7 +2,7 @@
 layout: post
 title: "LeetCode-85.最大矩形(Maximal Rectangle)"
 categories: Leetcode
-tags: Stack Array
+tags: Array Hash-table Dynamic-programming Stack
 excerpt: ""
 ---
 
