--- a/_posts/leetcode/2020-10-30-leetcode-78.md
+++ b/_posts/leetcode/2020-10-30-leetcode-78.md
@@ -3,7 +3,7 @@ layout: post
 title: "LeetCode-78.子集(Subsets)"
 categories: Leetcode
 tags: Array Backtracking Bit-manipulation
-excerpt: ""
+excerpt: "创世纪"
 ---
 
 * content
