--- a/_posts/leetcode/2020-10-30-leetcode-79.md
+++ b/_posts/leetcode/2020-10-30-leetcode-79.md
@@ -3,7 +3,7 @@ layout: post
 title: "LeetCode-79.单词搜索(Word Search)"
 categories: Leetcode
 tags: Array Backtracking
-excerpt: ""
+excerpt: "Faded"
 ---
 
 * content
