--- a/_posts/leetcode/2020-07-18-leetcode-12.md
+++ b/_posts/leetcode/2020-07-18-leetcode-12.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "12. 整数转罗马数字(Integer to Roman)"
+title: "LeetCode-12.整数转罗马数字(Integer to Roman)"
 categories: Leetcode
 tags: String Math
 excerpt: "自由之翼"
@@ -9,7 +9,7 @@ excerpt: "自由之翼"
 * content
 {:toc}
 
-## 12. Integer to Roman
+## 12. 整数转罗马数字
 
 罗马数字由以下7种不同字符表示： I， V， X， L，C，D 和 M。
 
@@ -85,6 +85,12 @@ C 放在 D (500) 和 M (1000) 的左边，可表示 400 和 900。
 输出: "MCMXCIV"
 解释: M = 1000, CM = 900, XC = 90, IV = 4.
 ```
+
+来源：力扣（LeetCode）
+
+链接：[https://leetcode-cn.com/problems/integer-to-roman/](https://leetcode-cn.com/problems/integer-to-roman/)
+
+Link：[https://leetcode.com/problems/integer-to-roman/](https://leetcode.com/problems/integer-to-roman/)
 
 ### 模拟法
 O(1), 因为罗马字母排列组合大概10中左右, 输入参数范围很小(1, 3999), O(N) = O(1)
