--- a/_posts/leetcode/2020-11-10-leetcode-85.md
+++ b/_posts/leetcode/2020-11-10-leetcode-85.md
@@ -66,6 +66,96 @@ matrix[i][j] 为 '0' 或 '1'
 
 Link：[https://leetcode.com/problems/maximal-rectangle/](https://leetcode.com/problems/maximal-rectangle/)
 
+## 动态规划
 
+O(M * N)
+
+上一题, 有了一种计算最大长方形的办法, 那么一行行扫描, 从当前一行往上记录1的个数, 计算每个直方图中的最大矩形面积
+
+```
+# 第一排
+|    1    0    1    0    0
+--------------------------------
+    [1,   0,   1,   0,   0]
+
+# 第二排
+|    1    0    1    0    0
+|    1    0    1    1    1
+--------------------------------
+    [2,   0,   2,   1,   1]
+
+# 第三排
+|    1    0    1    0    0
+|    1    0    1    1    1
+|    1    1    1    1    1
+--------------------------------
+    [3,   1,   3,   2,   2]
+
+# 第四排
+|    1    0    1    0    0
+|    1    0    1    1    1
+|    1    1    1    1    1
+|    1    0    0    1    0
+--------------------------------
+    [4,   0,   0,   3,   0]
+```
+
+
+### 递推公式
+
+```
+if matrix[row][j] == '1':
+  dp[j] = matrix[row][j] + dp[j]
+else:
+  dp[j] = 0
+```
+
+### 计算方向
+
+由上到下
+
+### 初始值豫边界条件
+
+无
+
+```python
+class Solution:
+    def maximalRectangle(self, matrix: List[List[str]]) -> int:
+        if len(matrix) == 0 or len(matrix[0]) == 0:
+            return 0
+        
+        row = len(matrix)
+        col = len(matrix[0])
+        
+        res = 0
+        dp = [0 for i in range(col)]
+        for i in range(row):
+            for j in range(col):
+                if matrix[i][j] == '1':
+                    dp[j] += 1
+                else:
+                    dp[j] = 0
+                    
+            res = max(res, self.calculateArea(dp))
+            
+        return res
+                    
+                    
+    def calculateArea(self, nums: List[int]) -> int:
+        heights = nums + [-1]
+        stack = []
+        res = 0
+        
+        for i in range(len(heights)):
+            while stack and heights[stack[-1]] > heights[i]:
+                index = stack.pop()
+                left = stack[-1] if stack else -1
+                area = (i - left - 1) * heights[index]
+                res = max(res, area)
+        
+            stack.append(i)
+        
+        return res
+```
 
 --End--
