--- a/_posts/leetcode/2020-11-10-leetcode-85.md
+++ b/_posts/leetcode/2020-11-10-leetcode-85.md
@@ -66,7 +66,7 @@ matrix[i][j] 为 '0' 或 '1'
 
 Link：[https://leetcode.com/problems/maximal-rectangle/](https://leetcode.com/problems/maximal-rectangle/)
 
-## 动态规划
+## 动态规划 + 栈
 
 O(M * N)
 
@@ -155,6 +155,125 @@ class Solution:
         
             stack.append(i)
         
+        return res
+```
+
+## 动态规划 + 三个数组
+
+考虑切割的话, n个数有n + 1个分割点, 逐行扫描, 找到(右边界 - 左边界) * (高)，就可以计算面积
+
+```
+    |  1  |  0  |  1  |  0  |  0  |
+    |  1  |  0  |  1  |  1  |  1  |
+    |  1  |  1  |  1  |  1  |  1  |
+    |  1  |  0  |  0  |  1  |  0  |
+    ^     ^     ^     ^     ^     ^
+    0th   1th   2th   3th   4th   5th
+
+    其中, M * N = 4 * 5
+```
+
+边界用切割点来表示
+
+### 状态定义
+
+从第ith高度出发，能够组成的最大面积
+
+### 计算公式
+
+以下dp更新都是考虑到上一行, 上一行作为等号的右值dp[j], 当前行作为等号的左值dp[j]
+
+左边界, 计算时考虑上一行
+
+```
+left_bound = 0
+
+如果matrix[i][j] == 1, left[j] = max(left[j], left_bound)
+
+相反，左边界向右移动, left_bound = j + 1, 高度0的左边界重置为0
+```
+
+右边界，计算时考虑上一行
+
+```
+right_bound = N
+
+如果matrix[i][j] == 1, right[j] = min(right[j], right_bound)
+
+相反，有边界向左移动, right_bound = j, 高度0的右边界重置为N
+```
+
+高度，计算时考虑上一行
+
+```
+如果matrix[i][j] == 1, height[j] += 1
+
+相反 height[j] = 0
+```
+
+### 初始化
+
+left, height 初始化为0
+
+right 初始化为M,(M行 * N列）
+
+### 边界条件
+
+当元素为0时, left, height重置为0
+
+当元素为0时, right重置为n
+
+### 计算方向
+
+逐行扫描
+
+代码如下:
+
+```python
+class Solution:
+    def maximalRectangle(self, matrix: List[List[str]]) -> int:
+        if len(matrix) == 0 or len(matrix[0]) == 0:
+            return 0
+        
+        m = len(matrix)
+        n = len(matrix[0])
+        
+        height = [0 for i in range(n)]
+        left = [0 for i in range(n)]
+        right = [n for i in range(n)]
+        
+        res = 0
+        
+        for i in range(m):
+            # 高度
+            for j in range(n):
+                if matrix[i][j] == '1':
+                    height[j] += 1
+                else:
+                    height[j] = 0
+                
+            # 左边界
+            left_boundry = 0
+            for j in range(n):
+                if matrix[i][j] == '1':
+                    left[j] = max(left[j], left_boundry)
+                else:
+                    # left[j] = 0
+                    left_boundry = j + 1
+                    
+            # 右边界
+            right_boundry = n
+            for j in range(n)[::-1]:
+                if matrix[i][j] == '1':
+                    right[j] = min(right[j], right_boundry)
+                else:
+                    # right[j] = n
+                    right_boundry = j
+                    
+            # 面积
+            for j in range(n):
+                res = max(res, (right[j] - left[j]) * height[j])
+                
         return res
 ```
 
