--- a/_posts/leetcode/2020-11-10-leetcode-85.md
+++ b/_posts/leetcode/2020-11-10-leetcode-85.md
@@ -3,7 +3,7 @@ layout: post
 title: "LeetCode-85.最大矩形(Maximal Rectangle)"
 categories: Leetcode
 tags: Array Hash-table Dynamic-programming Stack
-excerpt: ""
+excerpt: "难上加难"
 ---
 
 * content
@@ -173,11 +173,9 @@ class Solution:
     其中, M * N = 4 * 5
 ```
 
-边界用切割点来表示
-
 ### 状态定义
 
-从第ith高度出发，能够组成的最大面积
+边界用切割点来表示, 从第ith高度出发，能够组成的最大面积
 
 ### 计算公式
 
