--- a/_posts/leetcode100/2020-07-20-leetcode-13.md
+++ b/_posts/leetcode100/2020-07-20-leetcode-13.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "13. 罗马数字转整数(Roman to Integer)"
+title: "LeetCode-13.罗马数字转整数(Roman to Integer)"
 categories: Leetcode
 tags: String Math
 excerpt: "犹豫就会败北"
@@ -9,7 +9,7 @@ excerpt: "犹豫就会败北"
 * content
 {:toc}
 
-## 13. Roman to Integer
+## 13. 罗马数字转整数
 
 罗马数字由以下7种不同字符表示： I， V， X， L，C，D 和 M。
 
@@ -85,6 +85,12 @@ C 放在 D (500) 和 M (1000) 的左边，可表示 400 和 900。
 输出: 1994
 解释: M = 1000, CM = 900, XC = 90, IV = 4.
 ```
+
+来源：力扣（LeetCode）
+
+链接：[https://leetcode-cn.com/problems/roman-to-integer/](https://leetcode-cn.com/problems/roman-to-integer/)
+
+Link：[https://leetcode.com/problems/roman-to-integer/](https://leetcode.com/problems/roman-to-integer/)
 
 ### 模拟法
 O(1), 因为罗马字母排列组合大概10中左右, 输入参数范围很小(1, 3999), O(N) = O(1)
