--- a/_posts/leetcode100/2020-11-02-leetcode-80.md
+++ b/_posts/leetcode100/2020-11-02-leetcode-80.md
@@ -3,7 +3,7 @@ layout: post
 title: "LeetCode-80.删除排序数组中的重复项 II(Remove Duplicates from Sorted Array II)"
 categories: Leetcode
 tags: Array Two-pointers
-excerpt: ""
+excerpt: "烽火戏诸侯"
 ---
 
 * content
@@ -11,9 +11,9 @@ excerpt: ""
 
 ## 80. 删除排序数组中的重复项 II
 
-给定一个增序排列数组 nums ，你需要在 原地 删除重复出现的元素，使得每个元素最多出现两次，返回移除后数组的新长度。
+给你一个排序数组nums ，原地删除重复出现的元素，使得每个元素最多出现两次，返回移除后数组的新长度。
 
-不要使用额外的数组空间，你必须在 原地 修改输入数组 并在使用 O(1) 额外空间的条件下完成。
+不要使用额外的数组空间，须在原数组修改​，且额外空间复杂度O(1)。
 
 说明：
 
