--- a/_posts/leetcode100/2020-11-10-leetcode-85.md
+++ b/_posts/leetcode100/2020-11-10-leetcode-85.md
@@ -211,15 +211,15 @@ right_bound = N
 
 ### 初始化
 
-left, height 初始化为0
+left, height数组初始化为0
 
-right 初始化为M,(M行 * N列）
+right数组初始化为N
 
 ### 边界条件
 
 当元素为0时, left, height重置为0
 
-当元素为0时, right重置为n
+当元素为0时, right重置为N
 
 ### 计算方向
 
