--- a/_posts/leetcode100/2020-11-02-leetcode-81.md
+++ b/_posts/leetcode100/2020-11-02-leetcode-81.md
@@ -3,7 +3,7 @@ layout: post
 title: "LeetCode-81.搜索旋转排序数组 II(Search in Rotated Sorted Array II)"
 categories: Leetcode
 tags: Array Binary-search
-excerpt: ""
+excerpt: "穷则思变"
 ---
 
 * content
