--- a/_posts/leetcode100/2020-11-16-leetcode-87.md
+++ b/_posts/leetcode100/2020-11-16-leetcode-87.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "LeetCode-87.分隔链表(Scramble String)"
+title: "LeetCode-87.扰乱字符串(Scramble String)"
 categories: Leetcode
 tags: String Dynamic-programming
 excerpt: ""
@@ -22,7 +22,7 @@ Apply step 1 recursively on each of the two substrings x and y.
 Given two strings s1 and s2 of the same length, return true if s2 is a scrambled string of s1, otherwise, return false.
 ```
 
-## 86. 分隔链表
+## 87. 扰乱字符串
 
 给定一个字符串 s1，我们可以把它递归地分割成两个非空子字符串，从而将其表示为二叉树。
 
