--- a/_posts/leetcode100/2020-11-18-leetcode-88.md
+++ b/_posts/leetcode100/2020-11-18-leetcode-88.md
@@ -75,4 +75,28 @@ class Solution:
             cur -= 1
 ```
 
+再简化
+
+```python
+class Solution:
+    def merge(self, nums1: List[int], m: int, nums2: List[int], n: int) -> None:
+        """
+        Do not return anything, modify nums1 in-place instead.
+        """
+        cur = m + n - 1
+        i = m - 1
+        j = n - 1
+        
+        while j >= 0:
+
+            if i >= 0 and nums1[i] >= nums2[j]:
+                nums1[cur] = nums1[i]
+                i -= 1
+            else:
+                nums1[cur] = nums2[j]
+                j -= 1
+
+            cur -= 1
+```
+
 --End--
