--- a/_posts/leetcode100/2020-07-21-leetcode-14.md
+++ b/_posts/leetcode100/2020-07-21-leetcode-14.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "14. 最长公共前缀(Longest Common Prefix)"
+title: "LeetCode-14.最长公共前缀(Longest Common Prefix)"
 categories: Leetcode
 tags: String
 excerpt: "多远都无畏"
@@ -9,7 +9,7 @@ excerpt: "多远都无畏"
 * content
 {:toc}
 
-## 14. Longest Common Prefix
+## 14. 最长公共前缀
 
 编写一个函数来查找字符串数组中的最长公共前缀。
 
@@ -33,6 +33,12 @@ excerpt: "多远都无畏"
 说明:
 
 所有输入只包含小写字母 a-z 。
+
+来源：力扣（LeetCode）
+
+链接：[https://leetcode-cn.com/problems/longest-common-prefix/](https://leetcode-cn.com/problems/longest-common-prefix/)
+
+Link：[https://leetcode.com/problems/longest-common-prefix/](https://leetcode.com/problems/longest-common-prefix/)
 
 ## 扫描法
 
