--- a/_posts/leetcode100/2020-07-22-leetcode-15.md
+++ b/_posts/leetcode100/2020-07-22-leetcode-15.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "15. 三数之和(3Sum)"
+title: "LeetCode-15.三数之和(3Sum)"
 categories: Leetcode
 tags: Array Two-pointers
 excerpt: "三刀流"
@@ -9,7 +9,7 @@ excerpt: "三刀流"
 * content
 {:toc}
 
-## 15. 3Sum
+## 15. 三数之和
 
 给你一个包含 n 个整数的数组 nums，判断 nums 中是否存在三个元素 a，b，c ，使得 a + b + c = 0 ？请你找出所有满足条件且不重复的三元组。
 
@@ -17,7 +17,7 @@ excerpt: "三刀流"
 
 示例：
 
-```
+```python
 给定数组 nums = [-1, 0, 1, 2, -1, -4]，
 
 满足要求的三元组集合为：
@@ -26,6 +26,12 @@ excerpt: "三刀流"
   [-1, -1, 2]
 ]
 ```
+
+来源：力扣（LeetCode）
+
+链接：[https://leetcode-cn.com/problems/3sum/](https://leetcode-cn.com/problems/3sum/)
+
+Link：[https://leetcode.com/problems/wildcard-matching/](https://leetcode.com/problems/wildcard-matching/)
 
 ## 双指针
 
