--- a/_posts/leetcode100/2020-07-22-leetcode-15.md
+++ b/_posts/leetcode100/2020-07-22-leetcode-15.md
@@ -17,7 +17,7 @@ excerpt: "三刀流"
 
 示例：
 
-```python
+```
 给定数组 nums = [-1, 0, 1, 2, -1, -4]，
 
 满足要求的三元组集合为：
@@ -31,7 +31,7 @@ excerpt: "三刀流"
 
 链接：[https://leetcode-cn.com/problems/3sum/](https://leetcode-cn.com/problems/3sum/)
 
-Link：[https://leetcode.com/problems/wildcard-matching/](https://leetcode.com/problems/wildcard-matching/)
+Link：[https://leetcode.com/problems/3sum/](https://leetcode.com/problems/3sum/)
 
 ## 双指针
 
