--- a/_posts/leetcode100/2020-11-19-leetcode-89.md
+++ b/_posts/leetcode100/2020-11-19-leetcode-89.md
@@ -2,7 +2,7 @@
 layout: post
 title: "LeetCode-89.格雷编码(Gray Code)"
 categories: Leetcode
-tags: Array Two-pointers
+tags: Backtracking
 excerpt: ""
 ---
 
@@ -54,5 +54,126 @@ excerpt: ""
 Link：[https://leetcode.com/problems/gray-code/](https://leetcode.com/problems/gray-code/)
 
 
+## 回溯法
+
+也算是暴力解法，每次**异或**只变化一个bit位的值, 查看是否可行
+
+```python
+class Solution:
+    def grayCode(self, n: int) -> List[int]:
+        
+        ans = [0]
+        visited = set(ans)
+        self.helper(0, n, visited, ans)
+        return self.res
+
+    def helper(self, cur: int, n: int, visited: set, ans: List[int]) -> bool:
+        
+        if len(ans) == 2 ** n:
+            self.res = ans.copy()
+            return True
+
+        for i in range(n):
+            num = cur ^ (1 << i)
+            if num in visited:
+                continue
+                
+            visited.add(num)
+            if self.helper(num, n, visited, ans + [num]):
+                return True
+            visited.remove(num)
+
+        return False
+```
+
+## 动态规划
+
+O(N)
+
+第N个结果，可以依赖第N - 1个结果
+
+```python
+                                         0 + 00 = 000
+                                         0 + 01 = 001
+                     0 + 0 = 00          0 + 11 = 011
+0    ->    0   ->    0 + 1 = 01    ->    0 + 10 = 010
+
+```
+
+在前一个基础上天上一个0
+
+```python
+0   ->    1   ->    1 + 1 = 11    ->    1 + 10 = 110
+                    1 + 0 = 10          1 + 11 = 111
+                                        1 + 01 = 101
+                                        1 + 00 = 100
+```
+
+在前一个逆序基础上天上一个1,
+
+第0个比较特殊，是个初始值
+
+```python
+class Solution:
+    def grayCode(self, n: int) -> List[int]:
+        
+        res = [0]
+        
+        for i in range(n):
+            size = len(res)
+            for j in range(size)[::-1]:
+                val = (1 << i) | res[j]
+                res.append(val)
+        
+        return res
+```
+
+## One more thing
+
+二进制转格雷编码公式: G(i) = i ^ (i / 2) = i ^ (i >> 1)
+
+⚠️，按照题目说明，满足条件的格雷码不止一组
+
+```python
+    i = ...?01...1
+i + 1 = ...?10...0
+```
+
+首先i + 1，会把一个二进制数，最后一个0置成1, 并且这个1后面都是0, 也就是仅?之后是不一样的
+
+```python
+           i = . . . ? 0 1 . . . 1
+      i >> 1 =   . . . ? 0 1 . . . 1
+         xor = xxxxxxx   1 0 . . 0
+               =======   =========
+       i + 1 = . . . ? 1 0 . . . 0
+(i + 1) >> 1 =   . . . ? 1 0 . . . 0
+         xor = xxxxxxx   1 0 . . 0
+```
+
+如上图，划线部分上下是一致的，所以异或的结果也一致，那也就只有**一位**是不同的，满足格雷编码条件
+
+以n=3为例
+
+```python 
+i       000    001    010    011    100    101    110    111       
+i >> 1   000    001    010    011    100    101    110    111
+                    
+        000    001    011    010    110    111    101    100
+         0      1      3      2      6      7      5      4  
+```
+
+公式在手, 天下我有:
+
+```python
+class Solution:
+    def grayCode(self, n: int) -> List[int]:
+        
+        res = []
+        for i in range(1 << n):
+            res.append(i ^ (i >> 1))
+            
+        return res
+```
 
 --End--
