--- a/_posts/leetcode100/2020-11-19-leetcode-89.md
+++ b/_posts/leetcode100/2020-11-19-leetcode-89.md
@@ -134,6 +134,26 @@ class Solution:
 
 ⚠️，按照题目说明，满足条件的格雷码不止一组
 
+### 二进制转格雷编码
+
+例如 100101, 相当于每一位和它前一位异或运算
+
+```python
+      nums = [1, 0, 0, 1, 0, 1]
+           
+nums >> 1  = [0, 1, 0, 0, 1, 0, 1]
+
+       xor = [1, 1, 0, 1, 1, 1]
+
+xor[0] = nums[0] ^ 0 = nums[0]
+xor[1] = nums[0] ^ nums[1]
+xor[2] = nums[1] ^ nums[2]
+...
+xor[n] = nums[n] ^ nums[n - 1]
+```
+
+### 相邻格雷码证明
+
 ```python
     i = ...?01...1
 i + 1 = ...?10...0
@@ -163,7 +183,7 @@ i >> 1   000    001    010    011    100    101    110    111
          0      1      3      2      6      7      5      4  
 ```
 
-公式在手, 天下我有:
+### 实现代码
 
 ```python
 class Solution:
