--- a/_posts/leetcode100/2020-11-19-leetcode-89.md
+++ b/_posts/leetcode100/2020-11-19-leetcode-89.md
@@ -138,7 +138,7 @@ class Solution:
 
 例如 100101, 相当于每一位和它前一位异或运算
 
-```python
+```
       nums = [1, 0, 0, 1, 0, 1]
            
 nums >> 1  = [0, 1, 0, 0, 1, 0, 1]
@@ -154,14 +154,14 @@ xor[n] = nums[n] ^ nums[n - 1]
 
 ### 相邻格雷码证明
 
-```python
+```
     i = ...?01...1
 i + 1 = ...?10...0
 ```
 
 首先i + 1，会把一个二进制数，最后一个0置成1, 并且这个1后面都是0, 也就是仅?之后是不一样的
 
-```python
+```
            i = . . . ? 0 1 . . . 1
       i >> 1 =   . . . ? 0 1 . . . 1
          xor = xxxxxxx   1 0 . . 0
@@ -175,7 +175,7 @@ i + 1 = ...?10...0
 
 以n=3为例
 
-```python 
+```
 i       000    001    010    011    100    101    110    111       
 i >> 1   000    001    010    011    100    101    110    111
                     
@@ -183,7 +183,7 @@ i >> 1   000    001    010    011    100    101    110    111
          0      1      3      2      6      7      5      4  
 ```
 
-### 实现代码
+### 代码实现
 
 ```python
 class Solution:
