--- a/_posts/leetcode100/2020-11-23-leetcode-91.md
+++ b/_posts/leetcode100/2020-11-23-leetcode-91.md
@@ -93,10 +93,10 @@ class Solution:
             return 1 if s[-1] == '0' else 2
 
         count = 0
-        if 1 <= int(s[-1]) <= 9: # 后一个字符
+        if 1 <= int(s[-1]) <= 9: # 末尾一个字符
             count += self.numDecodings(s[:-1]) # 去掉末尾一个字符
         
-        if 10 <= int(s[-2:]) <= 26: #后两个字符
+        if 10 <= int(s[-2:]) <= 26: #末尾两个字符
             count += self.numDecodings(s[:-2]) # 去掉末尾两个字符
 
         return count
