--- a/_posts/leetcode100/2020-07-23-leetcode-16.md
+++ b/_posts/leetcode100/2020-07-23-leetcode-16.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "16. 最接近的三数之和(3Sum Closest)"
+title: "LeetCode-16.最接近的三数之和(3Sum Closest)"
 categories: Leetcode
 tags: Array Two-pointers
 excerpt: "栀子花套房"
@@ -9,7 +9,7 @@ excerpt: "栀子花套房"
 * content
 {:toc}
 
-## 16. 3Sum Closest
+## 16. 最接近的三数之和
 
 给定一个包括 n 个整数的数组 nums 和 一个目标值 target。找出 nums 中的三个整数，使得它们的和与 target 最接近。返回这三个数的和。假定每组输入只存在唯一答案。
 
@@ -28,6 +28,12 @@ excerpt: "栀子花套房"
 -10^3 <= nums[i] <= 10^3
 -10^4 <= target <= 10^4
 ```
+
+来源：力扣（LeetCode）
+
+链接：[https://leetcode-cn.com/problems/3sum-closest/](https://leetcode-cn.com/problems/3sum-closest/)
+
+Link：[https://leetcode.com/problems/3sum-closest/](https://leetcode.com/problems/3sum-closest/)
 
 ## 双指针
 
