--- a/_posts/leetcode100/2020-11-25-leetcode-94.md
+++ b/_posts/leetcode100/2020-11-25-leetcode-94.md
@@ -49,7 +49,7 @@ excerpt: ""
 
 ![图片说明](https://geemaple.github.io/images/leetcode-algorithm-94-3.jpg)
 
-``` 
+```
 输入：root = [1,null,2]
 输出：[1,2]
 ```
@@ -59,9 +59,10 @@ excerpt: ""
 ```
 树中节点数目在范围 [0, 100] 内
 -100 <= Node.val <= 100
- 
-进阶: 递归算法很简单，你可以通过迭代算法完成吗？
 ```
+
+> 进阶: 递归算法很简单，你可以通过迭代算法完成吗？
+
 
 来源：力扣（LeetCode）
 
