--- a/_posts/leetcode100/2020-11-25-leetcode-94.md
+++ b/_posts/leetcode100/2020-11-25-leetcode-94.md
@@ -99,7 +99,7 @@ O(N)
 
 这个没法解释，只能自己尝试着推导以下
 
-首先，要输出最左边的**左节点**, 那之前的路径用stack保存下来, 用来回退到**中**节点
+首先，要输出最左边的**左节点**, 那之前的路径用stack保存下来, 用来回退到**中节点**
 
 结尾的时候，当前值cur要变化，那把它置为**右节点**
 
