Update. 另一种非递归

--- a/_posts/leetcode100/2020-11-25-leetcode-94.md
+++ b/_posts/leetcode100/2020-11-25-leetcode-94.md
@@ -125,4 +125,26 @@ class Solution:
         return res
 ```
 
+多入栈一次，少了一些判断
+
+```python
+class Solution:
+    def inorderTraversal(self, root: TreeNode) -> List[int]:
+                
+        res = []
+        stack = []
+        cur = root
+        
+        while cur is not None or len(stack) > 0:
+            while cur is not None:
+                stack.append(cur)
+                cur = cur.left
+                
+            cur = stack.pop()   
+            res.append(cur.val)
+            cur = cur.right
+                        
+        return res
+```
+
 --End--
