--- a/_posts/leetcode100/2020-11-23-leetcode-91.md
+++ b/_posts/leetcode100/2020-11-23-leetcode-91.md
@@ -72,7 +72,7 @@ s 只包含数字，并且可能包含前导零。
 Link：[https://leetcode.com/problems/decode-ways/](https://leetcode.com/problems/decode-ways/)
 
 
-## 递归 + 记忆搜索
+## 递归 + 记忆化搜索
 
 由于python的强大，加一个lru_cache就可以了
 
