--- a/_posts/leetcode100/2020-11-26-leetcode-96.md
+++ b/_posts/leetcode100/2020-11-26-leetcode-96.md
@@ -88,7 +88,50 @@ class Solution:
 
 ## 动态规划
 
-//BD
+O(N^2)
+
+### 状态定义
+
+dp[n]为[1...N]序列能够组成多少不同的BST
+
+### 状态迁移
+
+```python
+              [i]
+            /     \
+[1 ... i- 1]       [i + 1 ... n]
 
 
+dp[n] = dp[0] * dp[n - 1] +  # 第i = 1个数字作为root
+        dp[1] * dp[n - 2] +  # 第i = 2个数字作为root
+        dp[2] * dp[n - 3] +  # 第i = 3个数字作为root
+        ...
+        dp[n - 1] * dp[0]    # 第i = n个数字作为root
+```
+
+### 计算方向
+
+从小树到大树
+
+### 边界条件
+
+```python
+dp[0] = 1 # 空树
+dp[1] = 1 # 数字为根
+```
+
+#### 代码实现
+
+```python
+class Solution:
+    def numTrees(self, n: int) -> int:
+        dp = [0 for i in range(n + 1)]
+        dp[0] = dp[1] = 1
+        
+        for i in range(2, n + 1):
+            for j in range(i):
+                dp[i] += dp[j] * dp[i - j - 1]
+                
+        return dp[-1]
+```
 --End--
