--- a/_posts/leetcode100/2020-11-26-leetcode-96.md
+++ b/_posts/leetcode100/2020-11-26-leetcode-96.md
@@ -37,7 +37,7 @@ Link：[https://leetcode.com/problems/unique-binary-search-trees/](https://leetc
 
 ## 递归 + 记忆化搜索
 
-数天然就是递归定义的，所以用递归应该会比较直观简单一些
+树天然就是递归定义的，所以用递归应该会比较直观简单一些
 
 这里有个非常重要的BST属性，即BST的中序遍历是一个递增序列。
 
@@ -66,7 +66,7 @@ Link：[https://leetcode.com/problems/unique-binary-search-trees/](https://leetc
 from functools import lru_cache
 class Solution:
     def numTrees(self, n: int) -> int:
-        return self.helper(0, n)
+        return self.helper(1, n + 1)
 
     @lru_cache(maxsize=None)  
     def helper(self, start: int, end: int) -> int:
@@ -92,9 +92,11 @@ O(N^2)
 
 ### 状态定义
 
-dp[n]为[1...N]序列能够组成多少不同的BST
+dp[n]为连续N个数的序列(例如:[1...N])能够组成多少不同的BST
 
-### 状态迁移
+无论是[1,2]还是[5,6]只要长度相同，组成的BST个数也相同
+
+### 状态转移
 
 ```python
               [i]
