--- a/_posts/leetcode100/2020-07-24-leetcode-17.md
+++ b/_posts/leetcode100/2020-07-24-leetcode-17.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "17. 电话号码的字母组合(Letter Combinations of a Phone Number)"
+title: "LeetCode-17.电话号码的字母组合(Letter Combinations of a Phone Number)"
 categories: Leetcode
 tags: String Backtracking
 excerpt: "排列组合"
@@ -9,7 +9,7 @@ excerpt: "排列组合"
 * content
 {:toc}
 
-## 17. Letter Combinations of a Phone Number
+## 17. 电话号码的字母组合
 
 给定一个仅包含数字 2-9 的字符串，返回所有它能表示的字母组合。
 
@@ -26,6 +26,12 @@ excerpt: "排列组合"
 尽管上面的答案是按字典序排列的，但是你可以任意选择答案输出的顺序。
 ```
 
+来源：力扣（LeetCode）
+
+链接：[https://leetcode-cn.com/problems/letter-combinations-of-a-phone-number/](https://leetcode-cn.com/problems/letter-combinations-of-a-phone-number/)
+
+Link：[https://leetcode.com/problems/letter-combinations-of-a-phone-number/](https://leetcode.com/problems/letter-combinations-of-a-phone-number/)
+
 ## DFS/Backtracking
 
 O(2^N), 每个字母对应3-4个可能，也就是3^N ~ 4^N之间，大O表示法习惯用2来表示
@@ -41,7 +47,6 @@ excerpt: "排列组合"
 ![草稿说明](https://geemaple.github.io/images/leetcode-sketch-algorithm-17.png)
 
 ```python
-
 class Solution:
 
     digitToLetter = {
