--- a/_posts/leetcode100/2020-11-11-leetcode-86.md
+++ b/_posts/leetcode100/2020-11-11-leetcode-86.md
@@ -3,7 +3,7 @@ layout: post
 title: "LeetCode-86.分隔链表(Partition List)"
 categories: Leetcode
 tags: Linked-list Two-pointers
-excerpt: ""
+excerpt: "努力就会被看到"
 ---
 
 * content
@@ -101,6 +101,5 @@ class Solution:
             
         return small_head.next
 ```
-
 
 --End--
