--- a/_posts/leetcode100/2020-11-16-leetcode-87.md
+++ b/_posts/leetcode100/2020-11-16-leetcode-87.md
@@ -3,7 +3,7 @@ layout: post
 title: "LeetCode-87.扰乱字符串(Scramble String)"
 categories: Leetcode
 tags: String Dynamic-programming
-excerpt: ""
+excerpt: "里程对于滑雪是很重要的"
 ---
 
 * content
