--- a/_posts/leetcode100/2020-11-29-leetcode-97.md
+++ b/_posts/leetcode100/2020-11-29-leetcode-97.md
@@ -60,6 +60,33 @@ s1、s2、和 s3 都由小写英文字母组成
 
 Link：[https://leetcode.com/problems/interleaving-string/](https://leetcode.com/problems/interleaving-string/)
 
+## 递归 + 记忆化搜索
 
+```python
+from functools import lru_cache
+class Solution:
+    def isInterleave(self, s1: str, s2: str, s3: str) -> bool:
+        
+        if len(s1) + len(s2) != len(s3):
+            return False
+        
+        return self.helper(s1, 0, s2, 0, s3, '')
+        
+    @lru_cache(maxsize=None)
+    def helper(self, s1: str, i: int, s2: str, j, s3: str, match: str) -> bool:
+        
+        if i == len(s1) and j == len(s2) and match == s3:
+            return True
+        
+        if i < len(s1) and s1[i] == s3[i + j]:
+            if self.helper(s1, i + 1, s2, j, s3, match + s1[i]):
+                return True
+        
+        if j < len(s2) and s2[j] == s3[i + j]:
+            if self.helper(s1, i, s2, j + 1, s3, match + s2[j]):
+                return True
+
+        return False
+```
 
 --End--
